moviendo js a src

--- a/src/components/BotonesPrincipales.astro
+++ b/src/components/BotonesPrincipales.astro
@@ -5,7 +5,7 @@
 </nav>
 
 <script type="module">
-  import cargarTodosLosProgramas from "../../src/js/CargarTodosLosProgramas.js";
+  import cargarTodosLosProgramas from "/src/js/CargarTodosLosProgramas.js";
 
   // Cargar todos los programas
   const todosLosProgramas = document.querySelector("#todosLosProgramas");
