--- a/src/components/ControlCategorias.astro
+++ b/src/components/ControlCategorias.astro
@@ -199,8 +199,7 @@
 </style>
 
 <script>
-  import BuscarProgramas from "../../public/js/BuscarProgramas.js";
-  
+import BuscarProgramas from "/src/js/BuscarProgramas.js";
   // Obtener todos los checkboxes
   const checkboxes = document.querySelectorAll('input[type="checkbox"]');
 
