--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -59,8 +59,7 @@ import SeccionDeComentarios from "../components/SeccionDeComentarios.astro"
 </Layout>
 
 <script type="module">
-  import cargarProgramas from "../../public/js/CargarTodosLosProgramas.js";
-
+import cargarProgramas from "/src/js/CargarTodosLosProgramas";
   // Cargar todos los programas
   cargarProgramas();
 </script>
