quito la palabra public

--- a/src/components/ControlCategorias.astro
+++ b/src/components/ControlCategorias.astro
@@ -199,7 +199,7 @@
 </style>
 
 <script type="module">
-import BuscarProgramas from "/public/js/BuscarProgramas.js";
+import BuscarProgramas from "/js/BuscarProgramas.js";
   // Obtener todos los checkboxes
   const checkboxes = document.querySelectorAll('input[type="checkbox"]');
 
