--- a/src/components/ProgramasDestacados.astro
+++ b/src/components/ProgramasDestacados.astro
@@ -24,8 +24,8 @@ import ControlCategorias from "./ControlCategorias.astro";
 </article>
 
 <script type="module">
-  import cargarProgramas from "/public/js/CargarTodosLosProgramas.js";
-  import BuscarProgramas from "/public/js/BuscarProgramas.js";
+  import cargarProgramas from "/js/CargarTodosLosProgramas.js";
+  import BuscarProgramas from "/js/BuscarProgramas.js";
 
 
   // When click "Reload Button" the programs are reaload too
