arreglo de una huevada

--- a/src/components/BotonesPrincipales.astro
+++ b/src/components/BotonesPrincipales.astro
@@ -5,11 +5,11 @@
 </nav>
 
 <script type="module">
-  import cargarTodosLosProgramas from "/js/CargarTodosLosProgramas.js";
+  import cargarProgramas from "/js/CargarTodosLosProgramas.js";
 
   // Cargar todos los programas
   const todosLosProgramas = document.querySelector("#todosLosProgramas");
-  todosLosProgramas.addEventListener("click", () => cargarTodosLosProgramas());
+  todosLosProgramas.addEventListener("click", () => cargarProgramas());
 </script>
 
 <style>
