--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -59,7 +59,7 @@ import SeccionDeComentarios from "../components/SeccionDeComentarios.astro"
 </Layout>
 
 <script type="module">
-import cargarProgramas from "/js/CargarTodosLosProgramas";
+import cargarProgramas from "/js/CargarTodosLosProgramas.js";
   // Cargar todos los programas
   cargarProgramas();
 </script>
