--- a/public/css/estilarProgramas.css
+++ b/public/css/estilarProgramas.css
@@ -64,6 +64,10 @@ article span {
   text-shadow: 1px 1px rgba(0, 0, 0, 0.178);
 }
 
+article .textCategorias {
+  color: black;
+}
+
 #formularioDeProgramas article {
   margin: 40px;
 }
