Arreglando botón mostrar categoría

--- a/src/components/ControlCategorias.astro
+++ b/src/components/ControlCategorias.astro
@@ -211,7 +211,7 @@ import BuscarProgramas from "/js/BuscarProgramas.js";
 
   BOTON_MOSTRAR_CATEGORIAS.addEventListener("click", function () {
     const categoriasText =
-      document.querySelectorAll<HTMLElement>(".textCategorias");
+      document.querySelectorAll(".textCategorias");
 
     if (mostrarCategoriasBoolean) {
       console.log("Ocultando categorías...");
