--- a/src/components/ControlCategorias.astro
+++ b/src/components/ControlCategorias.astro
@@ -102,7 +102,7 @@
     />
     <label
       for="Gestión de archivos"
-      class="p-1 bg-gray-600/20 rounded-xl px-2 col-span-2"
+      class="p-1 bg-gray-600/20 rounded-xl px-2 col-span-4 lg:col-span-3 xl:col-span-2"
       >Gestión de Archivos</label
     >
   </section>
