--- a/src/components/SubirPrograma.astro
+++ b/src/components/SubirPrograma.astro
@@ -57,14 +57,42 @@ import Layout from "../layouts/Layout.astro";
         />
         <label for="detalles">Detalles</label>
       </div>
+
+      <section class="display flex flex-col items-center gap-3">
+        <h3>Categoría</h3>
+        <!-- The second value will be selected initially -->
+        <select name="select" id="select-categoria">
+          <option value="Archivo" selected>Archivo</option>
+          <option value="Utilidad">Utilidad</option>
+          <option value="Activador">Activador</option>
+          <option value="Juego">Juego</option>
+          <option value="Media">Media</option>
+          <option value="Hardware">Hardware</option>
+          <option value="Optimización">Optimización</option>
+          <option value="Múltiple">Múltiple</option>
+          <option value="Seguridad">Seguridad</option>
+          <option value="Gestión de archivos">Gestión de archivos</option>
+        </select>
+      </section>
+
       <button type="submit" id="black-button">Enviar</button>
     </form>
   </main>
 </Layout>
 
-<script>
+<script type="module">
+  import { DATABASE_URL } from "/js/Constantes.js";
+  
   // ---------- PASO 1 ---------- //
   document.addEventListener("DOMContentLoaded", function () {
+    let categoriaSeleccionada = ['Archivo'];
+  
+    const select = document.getElementById("select-categoria");
+    select.addEventListener("change", function () {
+      const selectedOption = this.options[select.selectedIndex];
+      console.log(selectedOption.value + ": " + selectedOption.text);
+      categoriaSeleccionada = [selectedOption.value];
+    });
     // Aquí va tu código JavaScript actual
     document
       .getElementById("programForm")
@@ -72,23 +100,17 @@ import Layout from "../layouts/Layout.astro";
         event.preventDefault(); // Evitar que el formulario recargue la página
         console.log("me toquetearon");
 
-        const submitButton = document.getElementById(
-          "black-button"
-        ) as HTMLButtonElement;
+        const submitButton = document.getElementById("black-button");
         submitButton.disabled = true; // Deshabilita el botón para evitar múltiples envíos
 
-        // Obtener los valores del formulario
-        const nombre = (document.getElementById("nombre") as HTMLInputElement)
-          .value;
-        const link_de_imagen = (
-          document.getElementById("link_de_imagen") as HTMLInputElement
-        ).value;
-        const link_de_descarga = (
-          document.getElementById("link_de_descarga") as HTMLInputElement
-        ).value;
-        const detalles = (
-          document.getElementById("detalles") as HTMLInputElement
-        ).value;
+        // Obtener los valores del formulario (Inputs de nombre, imagen, descarga y detalles)
+        const nombre = document.getElementById("nombre").value;
+        const link_de_imagen = document.getElementById("link_de_imagen").value;
+        const link_de_descarga =
+          document.getElementById("link_de_descarga").value;
+        const detalles = document.getElementById("detalles").value;
+
+        // Obtener los valores del select (Categoría)
 
         // ---------- PASO 2: Validar URLs ---------- //
         function isValidURL(url) {
@@ -106,9 +128,7 @@ import Layout from "../layouts/Layout.astro";
           return;
         }
 
-        const response = await fetch(
-          "https://backend-soft-share-1tr9ac9dt-nachos-projects-077bc528.vercel.app/get"
-        );
+        const response = await fetch(`${DATABASE_URL}/get`);
         const dbContent = await response.json(); // Obtener los datos de la base de datos
         console.log(dbContent);
         const arrayFinal = [];
@@ -126,19 +146,22 @@ import Layout from "../layouts/Layout.astro";
           detalles,
         ];
 
+        // ☝️ No se debe poner el valor de categoría selecionada ya que eso si se debe poder repetir.
+
         console.log(userValuesArray);
+        console.log("mierda");
 
         // Respuestas correspondientes a cada valor ingresado
-        const respuestas = [
-          "Soft-Share ya tiene un soft con ese nombre 😵",
-          "Soft-Share ya tiene un soft con esa imagen 😵",
-          "Soft-Share ya tiene un soft con ese link de descarga 😵",
-          "Soft-Share ya tiene un soft con esos detalles 😵",
-        ];
+        // const respuestas = [
+        //   "Soft-Share ya tiene un soft con ese nombre 😵",
+        //   "Soft-Share ya tiene un soft con esa imagen 😵",
+        //   "Soft-Share ya tiene un soft con ese link de descarga 😵",
+        //   "Soft-Share ya tiene un soft con esos detalles 😵",
+        // ];
 
         // Elemento donde se mostrará el error
-        const errorFather = document.getElementById("error-container");
-        const errorMessage = document.getElementById("error-message");
+        // const errorFather = document.getElementById("error-container");
+        // const errorMessage = document.getElementById("error-message");
 
         // Limpiar cualquier error previo
         // errorMessage.innerText = "";
@@ -157,30 +180,35 @@ import Layout from "../layouts/Layout.astro";
 
         // ---------- PASO 4: Insertar datos en la base de datos ---------- //
         try {
-          const response = await fetch(
-            "https://backend-soft-share-1tr9ac9dt-nachos-projects-077bc528.vercel.app/post",
-            {
-              method: "POST",
-              headers: {
-                "Content-Type": "application/json",
-              },
-              body: JSON.stringify({
-                nombre,
-                link_de_imagen,
-                link_de_descarga,
-                detalles,
-              }),
-            }
+          // const categoriaSeleccionada = [`Hardware`];
+
+          console.log(
+            `Intento poner datos en la base de adtos, con el valor de categoria selescionadad ${categoriaSeleccionada}`
           );
+          const response = await fetch(`${DATABASE_URL}/post`, {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify({
+              nombre,
+              link_de_imagen,
+              link_de_descarga,
+              detalles,
+              categoriaSeleccionada,
+            }),
+          });
+
+          console.log(response);
 
           if (response.ok) {
             alert("El programa se ha guardado con éxito ✅");
-            (document.getElementById("programForm") as HTMLFormElement).reset(); // Limpia el formulario después del éxito
+            document.getElementById("programForm").reset(); // Limpia el formulario después del éxito
           } else {
-            alert("Error al guardar el programa. Inténtalo nuevamente.");
+            alert("Error al guardar el programa.");
           }
         } catch (error) {
-          alert("Error al guardar el programa. Inténtalo nuevamente.");
+          alert("Error al guardar el programa.");
           console.error(error);
         } finally {
           submitButton.disabled = false; // Reactivar el botón
@@ -304,6 +332,8 @@ import Layout from "../layouts/Layout.astro";
     transition:
       transform,
       box-shadow 0.3s ease;
+    margin-top: 20px;
+    align-self: center;
   }
 
   #black-button:hover {
@@ -349,5 +379,23 @@ import Layout from "../layouts/Layout.astro";
     to {
       transform: rotate(360deg);
     }
+  }
+
+  /* Estilar el Select */
+
+  select {
+    margin-top: 0.3rem;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    padding: 2px 5px;
+    display: grid;
+    grid-template-rows: repeat(10, 1fr);
+    grid-auto-flow: column;
+    gap: 2px;
+    font-weight: bold;
+  }
+  select option {
+    background: rgb(230, 230, 230);
+    font-weight: normal;
   }
 </style>
