--- a/src/components/ControlCategorias.astro
+++ b/src/components/ControlCategorias.astro
@@ -1,9 +1,5 @@
 <main class="flex flex-col h-12 overflow-hidden transition-all">
-  <img
-    class="size-12 self-center"
-    src="/arrow-down.svg"
-    alt="arrow-down"
-  />
+  <span class="flex justify-center place-items-center items-center mb-2 bg-slate-400/20 py-1 rounded-md gap-1 group" id="span-drop-shadow-none" >Selecciona las categorías <img src="/css/click.png" class="size-8 group-hover:scale-110 group-hover:rotate-12 transition-all" alt="click" /></span>
 
   <button
     id="mostrarCategorias"
@@ -134,7 +130,7 @@
   }
 
   main {
-    height: 48px;
+    height: 45px;
     transition: all 0.5s cubic-bezier(0.83, 0.05, 0.16, 0.96);
     interpolate-size: allow-keywords;
   }
@@ -143,16 +139,14 @@
     height: auto;
   }
 
-  main img {
+  main span {
     transition: all 0.5s cubic-bezier(0.83, 0.05, 0.16, 0.96);
     cursor: s-resize;
-    filter: drop-shadow(0px 3px 2px rgba(0, 0, 0));
   }
 
-  main:hover img {
+  main:hover span {
     transition: all 0.5s cubic-bezier(0.83, 0.05, 0.16, 0.96);
-    transform: scale(1.2);
-    filter: drop-shadow(0px 5px 2px rgba(0, 0, 0, 0.7));
+    color: black;
   }
 
   /* Bótones para seleccionar categorías */
@@ -196,6 +190,7 @@
     border-radius: 2px;
     font-weight: bold;
   }
+
 </style>
 
 <script type="module">
