Cambiando emojis a imagenes.

--- a/src/components/AgregarComentario.astro
+++ b/src/components/AgregarComentario.astro
@@ -5,7 +5,7 @@ import Layout from "../layouts/Layout.astro";
 <Layout title="Comentarios">
   <main>
     <article>
-      <h2 class="font-bold text-center">¡Déjame un comentario!🪅</h2>
+      <h2 class="flex items-center font-bold text-center">¡Déjame un comentario! <img src="/piñata.png" class="size-10" alt=""></h2>
     </article>
 
     <form id="formularioDeComentario">
