--- a/src/components/ProgramasDestacados.astro
+++ b/src/components/ProgramasDestacados.astro
@@ -7,9 +7,9 @@ import ControlCategorias from "./ControlCategorias.astro";
 <article>
   <header class="flex flex-col gap-y-4 lg:flex-row mb-6">
     <h2
-      class="font-bold underline underline-offset-[10px] text-1xl lg:text-3xl text-center"
+      class="flex items-center font-bold underline underline-offset-[10px] text-1xl lg:text-3xl text-center gap-1"
     >
-      Programas destacados👑
+      Programas destacados <img src="/corona.png" class="size-10 relative bottom-1" alt="" />
     </h2>
     <div class="mb-4 lg:mb-0">
       <BotonBuscar />
