Cambio en el párrafo del index.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,11 +16,11 @@ import SeccionDeComentarios from "../components/SeccionDeComentarios.astro"
       class="presentation leading-6 mt-2 pt-0 text-base lg:text-[19px]"
       style="line-height: 1.5rem"
     >
-      Encuentra una variedad de herramientas informáticas, desde aplicaciones
-      completas hasta scripts útiles. <span style="color: #008f39"
+      Encuentra una variedad de recuros variados, desde script útiles
+      hasta aplicaciones completas con cracks. <span style="color: #008f39"
         >Comparte</span
-      > tus propios programas con la comunidad y vota por los mejores. Aprovecha
-      una plataforma colaborativa para <span style="color: #094293"
+      > tus propios recursos con los demás, aprovechando esta
+      plataforma de todos para <span style="color: #094293"
         >explorar</span
       > , <span style="color: #a65e2e">obtener</span> y
       <span style="color: #4b0082">contribuir</span> tus <span
