Agregando lógica para que no se suba un comentario com campos vaciós

--- a/src/components/AgregarComentario.astro
+++ b/src/components/AgregarComentario.astro
@@ -59,6 +59,11 @@ import Layout from "../layouts/Layout.astro";
         return;
       }
 
+      if (!autor || !comentario) {
+        alert("Debes completar todos los campos.");
+        return;
+      }
+
       const respuesta = await fetch(
         "https://backend-soft-share-1tr9ac9dt-nachos-projects-077bc528.vercel.app/comments",
         {
