--- a/src/paper/AlertaDeExito.astro
+++ b/src/paper/AlertaDeExito.astro
@@ -32,8 +32,8 @@
     padding: 1rem;
 
     font-size: 0.875rem;
-    color: rgb(0, 196, 0); 
-    border: 1px solid rgb(0, 196, 0); 
+    color: #00c400; 
+    border: 1px solid #00c400; 
     border-radius: 0.5rem; 
     background-color: #bebebe; 
   }
