semi arreglo de la posición del ayuda & documentación cuando esta en diseño de móvil.

--- a/src/components/SubirPrograma.astro
+++ b/src/components/SubirPrograma.astro
@@ -8,17 +8,12 @@ import Layout from "../layouts/Layout.astro";
       Agrega Tus Programas
     </h1>
     <a
-      class="help pt-3 absolute lg:fixed text-sm lg:text-2xl"
+      class="help pt-3 lg:fixed text-sm lg:text-2xl"
       target="_blank"
       href="https://n4chos-organization.gitbook.io/soft-share"
       >Ayuda & Documentación 📑</a
     >
-    <a
-      class="pt-3 lg:block absolute lg:fixed text-sm lg:text-2xl"
-      target="_blank"
-      href="https://n4chos-organization.gitbook.io/soft-share"
-      >Ayuda & Documentación 📑</a
-    >
+
     <form id="programForm">
       <div class="input-group">
         <input
