--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,7 +20,7 @@ const { title } = Astro.props;
       content="Software, Subir, Descargar, Donwload, Upload, Share"
     />
     <!-- Icono -->
-    <link rel="icon" href="/a5.ico" />
+    <link rel="icon" href="/favicon.png" type="image/png" sizes="24x24" />
     <link rel="icon" href="/readme images/a5.svg" type="image/svg+xml" sizes="512x512" />
     <meta name="apple-mobile-web-app-title" content="Soft-Share page" />
     <meta name="generator" content={Astro.generator} />
