Se añade una nueva categoría (Estilo)

--- a/src/components/ControlCategorias.astro
+++ b/src/components/ControlCategorias.astro
@@ -99,6 +99,18 @@
     <label for="Seguridad" class="p-1 bg-gray-600/20 rounded-xl px-2"
       >Seguridad</label
     >
+    <!-- ESTILO -->
+    <input
+      class="invisible absolute"
+      type="checkbox"
+      name="estilo"
+      id="Estilo"
+    />
+    <label
+      for="Estilo"
+      class="p-1 bg-gray-600/20 rounded-xl px-2"
+      >Estilo</label
+    >
     <!-- GESTIÓN DE ARCHIVOS -->
     <input
       class="invisible absolute"
