--- a/src/components/SubirPrograma.astro
+++ b/src/components/SubirPrograma.astro
@@ -80,6 +80,7 @@ import Layout from "../layouts/Layout.astro";
           <option value="Optimización">Optimización</option>
           <option value="Múltiple">Múltiple</option>
           <option value="Seguridad">Seguridad</option>
+          <option value="Estilo">Estilo</option>
           <option value="Gestión de archivos">Gestión de archivos</option>
         </select>
       </section>
