--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,12 +7,13 @@ import AgregarComentario from "../components/AgregarComentario.astro";
 import SeccionDeComentarios from "../components/SeccionDeComentarios.astro";
 import AlertaError from "../components/AlertaError.astro";
 import AlertaExito from "../components/AlertaExito.astro";
-import Alerta from "../paper/Alerta.astro";
+import Ayuda_y_Controles from "../components/Ayuda_y_Controles.astro";
 
 // JS
 ---
 
 <Layout title="Soft-Share - Repositorio de tus Programas">
+  <Ayuda_y_Controles></Ayuda_y_Controles>
   <main class="w-11/12 lg:w-9/12">
     <h1 class="font-bold mt-2 pb-0 text-5xl lg:text-7xl">Soft-Share</h1>
     <p
