quite una "a" que ocasionaba problemas

--- a/src/components/Ayuda_y_Controles.astro
+++ b/src/components/Ayuda_y_Controles.astro
@@ -96,7 +96,7 @@
 
     @keyframes mostrar-controles {
       0% {
-        z-index: 1000;a
+        z-index: 1000;
         opacity: 0;
       }
       100% {
